--- a/hrm/views/hr_employee_inherit.xml
+++ b/hrm/views/hr_employee_inherit.xml
@@ -1,5 +1,23 @@
 <odoo>
     <data>
+        <record id="hr_kanban_view_employees_inherit" model="ir.ui.view">
+            <field name="name">hr.employee.kanban.inherit</field>
+            <field name="model">hr.employee</field>
+            <field name="inherit_id" ref="hr.hr_kanban_view_employees"/>
+            <field name="arch" type="xml">
+                <xpath expr="//li[@t-if='record.work_email.raw_value']" position="replace">
+                    <li t-if="record.email_work.raw_value" class="o_text_overflow">
+                        <field name="email_work"/>
+                    </li>
+                </xpath>
+                <xpath expr="//li[@t-if='record.work_phone.raw_value']" position="replace">
+                    <li t-if="record.mobile_phone.raw_value" class="o_force_ltr">
+                        <field name="mobile_phone"/>
+                    </li>
+                </xpath>
+
+            </field>
+        </record>
         <record id="view_hr_employee_form_inherit" model="ir.ui.view">
             <field name="name">view.hr.employee.form.inherit</field>
             <field name="model">hr.employee</field>
@@ -9,7 +27,18 @@
                     <header attrs="{'invisible': [('id', '=', False)]}">
                         <button name="action_send" string="Gửi duyệt" type="object" class="btn-primary"/>
                         <button name="action_cancel" string="Hủy" type="object"/>
-                        <field name="state" widget="statusbar" statusbar_visible="draft,pending,approved"/>
+                        <button name="%(action_lock_personnel_account_popup)d" type="action" string="Khóa TK nhân sự"
+                                class="btn-red"
+                                attrs="{'invisible': ['|', ('account_link', '=', False), ('status_account', '=', False)]}">
+                        </button>
+                        <button name="%(reason_reopening_account_action)d" type="action"
+                                string="Mở lại tài khoản nhân sự"
+                                class="btn-red">
+                        </button>
+<!--                        <button name="action_cancel_reopen_account" string="Hủy" type="object"-->
+<!--                                class="btn-secondary"-->
+<!--                                attrs="{'invisible': [('cancelled_reopen_account', '=', True)]}"/>-->
+                        <field name="state" widget="statusbar" statusbar_visible="draft,pending,approved,close,wait_reopen"/>
                     </header>
                 </xpath>
                 <xpath expr="//div[@id='o_work_employee_main']" position="replace">
@@ -22,12 +51,15 @@
                                    attrs="{'invisible': [('type_block', '!=', 'BLOCK_OFFICE_NAME')]}"/>
                             <field name="job_id" string="Vị trí công việc"/>
                             <field name="parent_id" string="Quản lý trực tiếp"/>
+                            <field name="team_marketing"
+                                   attrs="{'invisible': [('type_in_block_ecom', '!=', 'company')]}"/>
+                            <field name="team_sales"
+                                   attrs="{'invisible': [('type_in_block_ecom', '!=', 'company')]}"/>
                         </group>
                         <group>
                             <field name="work_start_date"/>
                             <field name="date_receipt"/>
                             <field name="profile_status"/>
-                            <field name="auto_create_acc"/>
                             <field name="id"/>
                             <field name="create_uid"/>
                         </group>
@@ -49,14 +81,26 @@
                 </xpath>
                 <xpath expr="//div[@class='oe_title']" position="after">
                     <!-- Thêm group vào sau div có class="oe_title" -->
-                    <group string="Liên hệ">
-                        <field name="personal_email" string="Email cá nhân"/>
-                        <field name="email_work" readonly="1" string="Email công việc"/>
-                        <field name="mobile_phone" string="Số điện thoại cá nhân"/>
-                    </group>
+                    <sheet>
+                        <group col="2">
+                            <group string="Liên hệ">
+                                <field name="personal_email" string="Email cá nhân"/>
+                                <field name="email_work" readonly="1" string="Email công việc"/>
+                                <field name="mobile_phone" string="Số điện thoại cá nhân"/>
+
+                            </group>
+                            <group>
+                                <field name="auto_create_acc"/>
+                            </group>
+                        </group>
+
+                    </sheet>
                 </xpath>
                 <xpath expr="//page[@name='personal_information']" position="replace">
                     <!-- Bạn có thể để trống nếu muốn xóa toàn bộ page này -->
+                </xpath>
+                <xpath expr="//div[@class='o_row']" position="attributes">
+                    <attribute name="position">remove</attribute>
                 </xpath>
                 <xpath expr="//field[@name='department_id']" position="attributes">
                     <attribute name="invisible">1</attribute>
@@ -94,8 +138,123 @@
                             </tree>
                         </field>
                     </page>
+                    <page string="Thiết lập nhân sự" attrs="{'invisible': [('id', '=', False)]}">
+                        <group>
+                            <group>
+                                <field name="account_link"/>
+                                <field name="status_account" widget="boolean_toggle"
+                                       attrs="{'invisible': [('account_link', '=', False)]}"/>
+<!--                                <field name="status_account" widget="boolean_toggle"-->
+<!--                                       attrs="{'invisible': [('account_link', '=', False)]}"/>-->
+                            </group>
+                            <group>
+                                <!--                                <field name="date_close"/>-->
+                                <!--                                <field name="date_open"/>-->
+                                <field name="url_reset_password_valid" invisible="1"/>
+                            </group>
+                        </group>
+                        <div class="alert alert-success text-center o_form_header"
+                             attrs="{'invisible': ['|',('url_reset_password_valid', '=', False),('status_account', '=', False)]}"
+                             role="status">
+                            <a class="close" data-dismiss="alert" href="#" aria-label="Close">
+                                x
+                            </a>
+                            <div>
+                                <strong>
+                                    Một email chứa liên kết khôi phục mật khẩu sau đã được gửi:
+                                </strong>
+                            </div>
+                            <div>
+                                <field name="url_reset_password" widget="url" on_change="1" id="signup_url"/>
+                            </div>
+                        </div>
+                    </page>
                 </xpath>
             </field>
         </record>
+
+        <!--        <record id="hr_kanban_view_employees" model="ir.ui.view">-->
+        <!--           <field name="name">hr.employee.kanban</field>-->
+        <!--           <field name="model">hr.employee</field>-->
+        <!--           <field name="priority">10</field>-->
+        <!--           <field name="arch" type="xml">-->
+        <!--               <kanban class="o_hr_employee_kanban" js_class="hr_employee_kanban" sample="1">-->
+        <!--                   <field name="id"/>-->
+        <!--                   <field name="hr_presence_state"/>-->
+        <!--                   <field name="user_id"/>-->
+        <!--                   <field name="user_partner_id"/>-->
+        <!--                   <field name="hr_icon_display"/>-->
+        <!--                   <templates>-->
+        <!--                       <t t-name="kanban-box">-->
+        <!--                       <div class="oe_kanban_global_click o_kanban_record_has_image_fill o_hr_kanban_record">-->
+        <!--                           <field name="image_128" widget="image" class="o_kanban_image_fill_left" options="{'zoom': true, 'zoom_delay': 1000, 'background': true, 'preventClicks': false}"/>-->
+
+        <!--                            <div class="oe_kanban_details">-->
+        <!--                               <div class="o_kanban_record_top">-->
+        <!--                                   <div class="o_kanban_record_headings">-->
+        <!--                                       <strong class="o_kanban_record_title">-->
+        <!--                                            <div class="float-right"-->
+        <!--                                                 t-if="record.hr_icon_display.raw_value == 'presence_present'"-->
+        <!--                                                 name="presence_present">-->
+        <!--                                                &lt;!&ndash; Employee is present/connected and it is normal according to his work schedule  &ndash;&gt;-->
+        <!--                                                <span class="fa fa-circle text-success" role="img" aria-label="Present"-->
+        <!--                                                      title="Present" name="presence_present">-->
+        <!--                                                </span>-->
+        <!--                                            </div>-->
+        <!--                                            <div class="float-right"-->
+        <!--                                                 t-if="record.hr_icon_display.raw_value == 'presence_absent'"-->
+        <!--                                                 name="presence_absent">-->
+        <!--                                                &lt;!&ndash; Employee is not present and it is normal according to his work schedule &ndash;&gt;-->
+        <!--                                                <span class="fa fa-circle-o text-muted" role="img" aria-label="Absent"-->
+        <!--                                                      title="Absent" name="presence_absent">-->
+        <!--                                                </span>-->
+        <!--                                            </div>-->
+        <!--                                            <div class="float-right"-->
+        <!--                                                 t-if="record.hr_icon_display.raw_value == 'presence_absent_active'"-->
+        <!--                                                    name="presence_absent_active">-->
+        <!--                                                &lt;!&ndash; Employee is connected but according to his work schedule,-->
+        <!--                                                     he should not work for now  &ndash;&gt;-->
+        <!--                                                <span class="fa fa-circle-o text-success" role="img"-->
+        <!--                                                      aria-label="Present but not active"-->
+        <!--                                                      title="Present but not active"-->
+        <!--                                                      name="presence_absent_active">-->
+        <!--                                                </span>-->
+        <!--                                            </div>-->
+        <!--                                            <div class="float-right"-->
+        <!--                                                 t-if="record.hr_icon_display.raw_value == 'presence_to_define'"-->
+        <!--                                                    name="presence_to_define">-->
+        <!--                                                &lt;!&ndash; Employee is not here but according to his work schedule, he should be connected &ndash;&gt;-->
+        <!--                                                <span class="fa fa-circle text-warning" role="img"-->
+        <!--                                                      aria-label="To define" title="To define"-->
+        <!--                                                      name="presence_to_define">-->
+        <!--                                                </span>-->
+        <!--                                            </div>-->
+        <!--                                            <field name="name" placeholder="Employee's Name"/>-->
+        <!--                                       </strong>-->
+        <!--                                       <span t-if="record.job_title.raw_value" class="o_kanban_record_subtitle"><field name="job_title"/></span>-->
+        <!--                                   </div>-->
+        <!--                               </div>-->
+        <!--                               <field name="category_ids" widget="many2many_tags" options="{'color_field': 'color'}" groups="hr.group_hr_manager"/>-->
+        <!--                               <ul>-->
+        <!--                                   <li id="last_login"/>-->
+        <!--                                   <li t-if="record.work_email.raw_value" class="o_text_overflow"><field name="work_email" /></li>-->
+        <!--                                   <li t-if="record.work_phone.raw_value" class="o_force_ltr"><field name="work_phone" /></li>-->
+        <!--                               </ul>-->
+        <!--                                <div class="oe_kanban_content">-->
+        <!--                                    <div class="o_kanban_record_bottom">-->
+        <!--                                        <div class="oe_kanban_bottom_left"/>-->
+        <!--                                        <div class="oe_kanban_bottom_right">-->
+        <!--                                            <a title="Chat" icon="fa-comments" href="#" class="ml8 o_employee_chat_btn" attrs="{'invisible': [('user_id','=', False)]}" role="button"><i class="fa fa-comments"/></a>-->
+        <!--                                        </div>-->
+        <!--                                    </div>-->
+        <!--                                </div>-->
+        <!--                           </div>-->
+        <!--                       </div>-->
+        <!--                       </t>-->
+        <!--                   </templates>-->
+        <!--               </kanban>-->
+        <!--            </field>-->
+        <!--        </record>-->
+
     </data>
 </odoo>
