--- a/hrm/views/hr_employee_view.xml
+++ b/hrm/views/hr_employee_view.xml
@@ -41,24 +41,23 @@
                                        attrs="{'invisible': [('type_block', '!=', 'BLOCK_OFFICE_NAME')]}"/>
                                 <field name="job_id" string="Vị trí công việc"/>
                             </group>
-                            <notebook>
-                                <page name="approval_status" string="Trạng thái phê duyệt"
-                                      attrs="{'invisible': [('approved_name', '=', False)]}">
-                                    <field name="approved_name" readonly="1"/>
-                                    <field name="approved_link" readonly="1">
-                                        <tree default_order="step ASC" class="hrm_custom_tree_notebook">
-                                            <field name="step"/>
-                                            <field name="approve"/>
-                                            <field name="obligatory"/>
-                                            <field name="excess_level"/>
-                                            <field name="approve_status"/>
-                                            <field name="time"/>
-                                        </tree>
-                                    </field>
-                                </page>
-                            </notebook>
-
                         </group>
+                        <notebook>
+                            <page name="approval_status" string="Trạng thái phê duyệt"
+                                  attrs="{'invisible': [('approved_name', '=', False)]}">
+                                <field name="approved_name" readonly="1"/>
+                                <field name="approved_link" readonly="1">
+                                    <tree default_order="step ASC" class="hrm_custom_tree_notebook">
+                                        <field name="step"/>
+                                        <field name="approve"/>
+                                        <field name="obligatory"/>
+                                        <field name="excess_level"/>
+                                        <field name="approve_status"/>
+                                        <field name="time"/>
+                                    </tree>
+                                </field>
+                            </page>
+                        </notebook>
                     </sheet>
                 </form>
             </field>
@@ -84,8 +83,9 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">hr.employee</field>
             <!--            <field name="search_view_id" ref="view_hrm_system_search"/>-->
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">kanban,tree,form</field>
             <field name="view_ids" eval="[(5, 0, 0),
+                (0, 0, {'view_mode': 'kanban', 'view_id': ref('hr_kanban_view_employees_inherit')}),
                 (0, 0, {'view_mode': 'tree', 'view_id': ref('view_employee_profile_tree')}),
                 (0, 0, {'view_mode': 'form', 'view_id': ref('view_hr_employee_form_inherit')})]"/>
         </record>
