--- a/hrm_chamcong/views/datn_dangky_tangca_nhanvien.xml
+++ b/hrm_chamcong/views/datn_dangky_tangca_nhanvien.xml
@@ -30,7 +30,7 @@
                         <button string="Phê duyệt" name="action_approve" type="object" attrs="{'invisible': ['|', ('state','=','draft'), ('state','=','approved')]}"
                                 groups="hrm_chamcong.hrm_phe_duyet_tang_ca"
                                 class="oe_highlight"/>
-                        <button string="Từ chối" name="action_refuse" type="object" attrs="{'invisible': [('state','!=','approved')]}"
+                        <button string="Từ chối" name="action_refuse" type="object" attrs="{'invisible': ['|', ('state','=','draft'),('state','!=','approved')]}"
                                 class="oe_highlight"
                                 groups="hrm_chamcong.hrm_phe_duyet_tang_ca"/>
                         <button string="Soạn thảo" name="action_draft" type="object"
