--- a/hrm/views/document_declaration_view.xml
+++ b/hrm/views/document_declaration_view.xml
@@ -2,7 +2,7 @@
     <data>
         <record id="view_document_declaration_form" model="ir.ui.view">
             <field name="name">hrm.document_declaration.form</field>
-            <field name="model">hrm.document_declaration</field>
+            <field name="model">hr.document_declaration</field>
             <field name="arch" type="xml">
                 <form string="Khai báo tài liệu">
                     <sheet>
@@ -12,14 +12,18 @@
                                 <field name="name"/>
                                 <field name="employee_id" attrs="{'readonly': [('profile_id', '!=', False)]}"
                                        force_save="1"/>
-                                <field name="related" invisible="1"/>
-                                <field name="block_id" readonly="1" force_save="1"/>
-                                <field name="system_id" attrs="{'invisible': [('related', '=', True)]}" readonly="1"
+                                <field name="type_block" string="Khối" readonly="1"
                                        force_save="1"/>
-                                <field name="company" attrs="{'invisible': [('related', '=', True)]}" readonly="1"
+                                <field name="type_in_block_ecom" string="Kiểu trong khối thương mại"
+                                       attrs="{'invisible': [('type_block', '!=', 'BLOCK_COMMERCE_NAME')], 'required': [('type_block', '=', 'BLOCK_COMMERCE_NAME')]}" readonly="1"
                                        force_save="1"/>
-                                <field name="department_id" attrs="{'invisible': [('related', '=', False)]}"
-                                       readonly="1" force_save="1"/>
+                                <field name="department_id" string="Hệ thống / Công ty" required="1"
+                                       attrs="{'invisible': [('type_block', '!=', 'BLOCK_COMMERCE_NAME')]}" readonly="1"
+                                       force_save="1"/>
+                                <field name="department_id" string="Phòng ban"  required="1"
+                                       attrs="{'invisible': [('type_block', '!=', 'BLOCK_OFFICE_NAME')]}" readonly="1"
+                                       force_save="1"/>
+
                                 <field name="give_back"/>
                                 <field name="complete"/>
                             </group>
@@ -51,15 +55,14 @@
 
         <record id="view_document_declaration_tree" model="ir.ui.view">
             <field name="name">hrm.document_declaration.tree</field>
-            <field name="model">hrm.document_declaration</field>
+            <field name="model">hr.document_declaration</field>
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
                     <field name="employee_id"/>
-                    <field name="block_id"/>
                     <field name="type_documents"/>
-                    <field name="system_id"/>
-                    <field name="company"/>
+                    <field name="type_block"/>
+                    <field name="type_in_block_ecom"/>
                     <field name="department_id"/>
                     <field name="give_back"/>
                     <field name="manager_document"/>
@@ -72,8 +75,8 @@
         <record id="document_declaration_action" model="ir.actions.act_window">
             <field name="name">Khai báo tài liệu</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">hrm.document_declaration</field>
-            <field name="domain">[('see_record_with_config', '=', True)]</field>
+            <field name="res_model">hr.document_declaration</field>
+<!--            <field name="domain">[('see_record_with_config', '=', True)]</field>-->
             <field name="view_mode">tree,form</field>
             <field name="view_ids" eval="[(5, 0, 0),
                 (0, 0, {'view_mode': 'tree', 'view_id': ref('view_document_declaration_tree')}),
