--- a/hrm/views/document_list_view.xml
+++ b/hrm/views/document_list_view.xml
@@ -11,22 +11,16 @@
                     </header>
                     <sheet>
                         <group>
-                            <field name="related" invisible="1"/>
-                            <field name="check_blocks" invisible="1"/>
-                            <field name="check_company" invisible="1"/>
+                            <field name="readonly_type_block" invisible="1"/>
+<!--                            <field name="related" invisible="1"/>-->
                             <field name="name" string="Tên hiển thị"/>
-                            <field name="block_id" attrs="{'readonly': [('check_blocks', '!=', 'full')]}"/>
-                            <field name="department_id" attrs="{'invisible': [('related', '!=', True)]}"/>
-                            <field name="system_id"
-                                   attrs="{'invisible': [('related', '=', True)], 'readonly': [('check_company', '!=', 'hrm.companies()')]}"
-                                   store="1"/>
-                            <field name="company" attrs="{'invisible': [('related', '=', True)]}"
-                            />
-                            <field name="position_id"/>
+                            <field name="type_block" attrs="{'readonly': [('readonly_type_block', '=', True)]}" force_save="1"/>
+                            <field name="department_id" attrs="{'invisible': [('type_block', '==', 'BLOCK_COMMERCE_NAME')], 'required': [('type_block', '==', 'BLOCK_OFFICE_NAME')]}"/>
+                            <field name="job_id" required="1"/>
                         </group>
                         <notebook>
                             <page string="Danh sách tài liệu" name="document_list">
-                                <field name="document_list" oder="sequence">
+                                <field name="document_list" order="sequence">
                                     <tree editable="bottom" class="hrm_custom_tree_notebook">
                                         <field name="sequence" readonly="1" force_save="1"/>
                                         <field name="doc"/>
@@ -46,11 +40,8 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
-                    <field name="block_id"/>
+                    <field name="type_block"/>
                     <field name="department_id"/>
-                    <field name="system_id"/>
-                    <field name="company"/>
-                    <field name="position_id"/>
                 </tree>
             </field>
         </record>
